# qwen-tris-memoryagent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  QWEN_BUILDOUT_LOG.md  README.md  pyproject.toml
data/cross_model_comparison_runs/: cross_model_same_packet_20260704T015538Z.json  (+9 more)
docs/: ARCHITECTURE.md  BROWSER_VERIFICATION_2026-06-10.md  FIVE_THREAD_HANDOFF.md  LOCKED_LANGUAGE_AND_BOUNDARIES.md  QWEN_TRIS_MEMORY_STRESS_BENCHMARK_PLAN_2026-06-30.md  QWEN_TRIS_MIRROR_ARCHITECTURE_SOURCE_PACK_2026-06-30.md  QWEN_TRIS_PUBLIC_SUBMISSION_PACKET_2026-07-01.md  QWEN_TRIS_PUBLIC_VERIFICATION_LADDER_2026-07-01.md  QWEN_TRIS_REFLEXION_COMPARISON_LANE_2026-07-03.md  SUBMISSION_CHECKLIST_QWEN.md  TRINI_RECALL_C5B_ITER_STACK_PROFILE.md  TRINI_RECALL_MEMORY_AI_PARTNER_ONE_PAGE_WHITE_PAPER.md  TRINI_RECALL_NEMOCLAW_OPENCLAW_GATE.md  TRINI_RECALL_SCAFFOLD_RUNBOOK.md
scripts/: build_alibaba_qwen_proof_clip.py  build_qwen_tris_commercial_20260702.py  check_boundary.py  run_cross_model_same_packet_eval.py  run_humaneval_reflexion_slice.py  run_longbench_public_slice.py  run_mbpp_reflexion_slice.py  run_memory_stress_seed_eval.py  run_qwen_memory_iterations.py  run_qwen_three_condition_iterations.py  run_trini_recall_demo.py  run_trini_recall_ui.py
source_packets/: trini_recall_track1_source_packet.md
tests/: test_alibaba_qwen_cloud_client.py  test_boundary_script.py  test_longbench_runner.py  test_trini_recall_memory.py
track_packets/: track1_memoryagent.md  track2_ai_showrunner.md  track3_agent_society.md  track4_autopilot_agent.md  track5_edgeagent.md
(+172 files in other folders)
